	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1
	viblnd    - Voltaire ibhost 3.4.5 and later
	ciblnd    - Topspin 3.2.0
	iiblnd    - Infiniserv 3.3 + PathBits patch
	gmlnd     - GM 2.1.22 and later
	mxlnd     - MX 1.2.1 or later
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
       * bug fixes

Severity   : major
Frequency  : rare	
Bugzilla   : 11394
Description: kptllnd didn't propagate some network errors up to LNET 
Details    : This bug was spotted while investigating 11394.  The fix
             ensures network errors on sends and bulk transfers are
	     propagated to LNET/lustre correctly.

Severity   : enhancement
Bugzilla   : 10316
Description: Fixed console chatter in case of -ETIMEDOUT.

Severity   : enhancement
Bugzilla   : 11684
Description: Added D_NETTRACE for recording network packet history
	     (initially only for ptllnd).  Also a separate userspace
	     ptllnd facility to gather history which should really be
	     covered by D_NETTRACE too, if only CDEBUG recorded history in
	     userspace.

Severity   : major
Frequency  : rare	
Bugzilla   : 11616
Description: o2iblnd handle early RDMA_CM_EVENT_DISCONNECTED.
Details    : If the fabric is lossy, an RDMA_CM_EVENT_DISCONNECTED
	     callback can occur before a connection has actually been
	     established.  This caused an assertion failure previously.

Severity   : enhancement
Bugzilla   : 11094
Description: Multiple instances for o2iblnd
Details    : Allow multiple instances of o2iblnd to enable networking over
	     multiple HCAs and routing between them.

Severity   : major
Bugzilla   : 11201
Description: lnet deadlock in router_checker
Details    : turned ksnd_connd_lock, ksnd_reaper_lock, and ksock_net_t:ksnd_lock
	     into BH locks to eliminate potential deadlock caused by
	     ksocknal_data_ready() preempting code holding these locks.

Severity   : major
Bugzilla   : 11126